src/ui/components/Timeline/Timeline.css
/*. replay */

.replay-player {
  -moz-appearance: none;
  background: var(--theme-body-background);
  box-sizing: border-box;
  --progressbar-transition: 200ms;
  display: flex;
  padding: 0px 20px;
  align-items: center;
}

.theme-light .replay-player {
  --commandbar-button-hover-background: #efefef;
  --progress-recording-background: hsl(0, 100%, 97%);
  --progress-playing-background: #d4ebff;
  --recording-marker-background: hsl(14.9, 100%, 67%);
  --replaying-marker-highlighted-background: var(--blue-60);
  --recording-marker-background-hover: hsl(14.9, 100%, 47%);
  --replaying-marker-fill-hover: var(--blue-60);
  --hover-scrubber-line-background: var(--blue-50);
  --progress-recording-line: #d0021b;
  --progressbar-background: var(--grey-30);
  --progressbar-line-color: var(--blue-40);
  --proggressbar-border-color: var(--theme-splitter-color);
  --tick-future-background: #bfc9d2;
  --tick-background: var(--blue-50);
  --tick-recording-background: #d0021b;
}

.replay-player .overlay-container {
  display: flex;
  position: relative;
  flex-grow: 1;
}

.replay-player .progressBar {
  position: relative;
  width: 100%;
  height: 32px;
  overflow: hidden;
}

.replay-player .progress {
  position: absolute;
  width: 100%;
  height: 100%;
  pointer-events: none;
  border-right-color: var(--replay-head-background);
  border-right-width: 1px;
  border-right-style: solid;
}

.replay-player .message-container {
  position: absolute;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

.replay-player .message {
  height: 11px;
  width: 11px;
  position: absolute;
  margin-top: auto;
  margin-bottom: auto;
  top: 0;
  bottom: 0;
  pointer-events: all;
}

.replay-player .message:hover {
  cursor: pointer;
}

.replay-player .message.highlighted .fill {
  fill: var(--replaying-marker-stroke);
  transition-duration: 100ms;
}

.replay-player .message.highlighted  {
  transform: scale(1.2);
  transition-duration: 100ms;
}

.replay-player .message .fill {
  fill: var(--replaying-marker-fill);
}

.replay-player .message .stroke {
  stroke: var(--theme-body-background);
  pointer-events: none;
}

.replay-player .message.paused {
  z-index: var(--z-index-1--paused-message);
}

.replay-player .message.paused .fill {
  fill: var(--replaying-paused-marker-fill);
}

.replay-player .message.paused .stroke {
  stroke: var(--replaying-paused-marker-stroke);
  stroke: var(--theme-body-background);
}

.replay-player .message:focus {
  outline: none;
}

.replay-player .scrubber {
  position: absolute;
  height: 30px;
  width: 1px;
  top: -8px;
  pointer-events: none;
  background: transparent;
}

.replay-player .scrubber.hovered path {
  fill: var(--hover-scrubber-line-background)
}

.replay-player .scrubber.hovered {
  background: var(--hover-scrubber-line-background);
  height: 40px;
}

/* The scrubber is 9px wide */
.replay-player .scrubber svg {
  margin-left: -4.5px;
}

.replay-player .commands {
  display: flex;
  flex-direction: row;
  margin: 11px 20px 11px 0px;
}

.replay-player .commands *:focus:not(:focus-visible) {
  outline: none;
  background: inherit;
}

.replay-player .commands > button {
  cursor: pointer;
  padding: 4px;
  border-radius: 4px;
}

.replay-player .commands > button .img {
  width: 20px;
  height: 20px;
}

.replay-player .commands > button:hover .img {
  background: var(--dark-blue);
}

.replay-player .btn {
  width: 14px;
  height: 14px;
  mask-size: 14px;
  background: var(--theme-icon-color);
  align-self: center;
  margin: 0 auto;
}

.replay-player .primary .btn {
  width: 18px;
  height: 17px;
  mask-size: 18px;
}

.replay-player .command-button.active:hover {
  background: var(--commandbar-button-hover-background);
  cursor: pointer;
}

.replay-player .command-button.active {
  opacity: 1;
}

.replay-player div.command-button .rewind {
  transform: scaleX(-1);
}

.replay-player div.command-button .previous {
  transform: scaleX(-1);
  margin-left: 8px;
}

.replay-player div.command-button .next {
  margin-right: 8px;
}

.replay-player .progress-line {
  width: 0%;
  height: 5px;
  border-radius: 4px;
  background: var(--progressbar-line-color);
  position: absolute;
  pointer-events: none;
  margin-top: auto;
  margin-bottom: auto;
  top: 0;
  bottom: 0;
}

.replay-player .progress-line.end {
  background: var(--progressbar-background);
}

.replay-player .tick {
  position: absolute;
  height: 100%;
}

.replay-player .tick::before,
.replay-player .tick::after {
  height: 1.5px;
  width: 1px;
  right: 0;
  position: absolute;
  content: "";
  display: block;
}

.replay-player .tick.future::before,
.replay-player .tick.future::after {
  background: var(--tick-future-background);
}

.replay-player .tick::before,
.replay-player .tick::after {
  background: var(--tick-background);
}

.replay-player .tick::after {
  bottom: 0;
}

.replay-player .tick::before {
  top: 0;
}

.replay-player .overlay-container:hover .tick {
  opacity: 1;
}

.replay-player .overlay-container .tick {
  opacity: 0.5;
}

.replay-player .overlay-container .tick:hover ~ .tick,
.replay-player .overlay-container .tick.highlight ~ .tick:not(.highlight) {
  opacity: 0.5;
}

.replay-player .untraversed {
  position: absolute;
  height: 100%;
  background: #000000;
  opacity: 0.2;
}

.replay-player .unscanned {
  position: absolute;
  height: 100%;
  background: #000000;
  opacity: 0.1;
}

.replay-player .zoomboundary {
  padding-top: 7px;
  padding-right: 4px;
}

